# Vega

./: Makefile  README.md  docker-compose.yml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/models/: request_log.py  server_config.py  usage_stats.py
backend/src/storage/: crypto.py  database.py  init_db.py
backend/tests/unit/: test_crypto.py  test_models.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
specs/001-api-gateway/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-api-gateway/checklists/: requirements.md
specs/001-api-gateway/contracts/: admin-api.yaml  gateway-api.yaml
